# azure-cli-dev-tools

./: .coveragerc  .flake8  .gitignore  .pylintrc  .travis.yml  HISTORY.rst  MANIFEST.in  README.md  README.rst  azdev.pyproj  azdev.sln  azure-pipelines-cli.yml  azure-pipelines.yml  pyproject.toml  setup.py  tox.ini  ubaid300
.github/azure-client-tools-bot/: config.yml
azdev/: __init__.py  __main__.py  az_monitor_diff_obj.json  az_monitor_diff_tree.json  az_monitor_diff_txt.json  az_monitor_meta.json  az_monitor_meta_after.json  az_monitor_meta_diff_obj.json  az_monitor_meta_diff_text.json  az_monitor_meta_diff_tree.json  az_monitor_meta_full.json  azdev.completion.sh  commands.py  completer.py  help.py  monitor.json  params.py  transformers.py
azdev.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
azdev/config/: cli.flake8  cli_pylintrc  ext.flake8  ext_pylintrc
azdev/mod_templates/: README.rst  _client_factory.py  _help.py  _params.py  _validators.py  azext_metadata.json  azure_bdist_wheel.py  commands.py  custom.py  setup.py  test_service_scenario.py
azdev/operations/: actions.py  code_gen.py  constant.py  format.py  help.py  legal.py  performance.py  pypi.py  regex.py  resource.py  setup.py  style.py
azdev/utilities/: __init__.py  command.py  config.py  const.py  display.py  git_util.py  path.py  testing.py  tools.py  venv.py
azure-cli-diff-tool/: HISTORY.rst  README.rst  setup.py
cli-meta-tool/: setup.py
scripts/: license_verify.py
src/: setup.py
tests/: test_linter.py  test_setup.py  test_style.py  test_tests.py
(+201 files in other folders)
