# -----------------------------------------------------------------------------
# Copyright (c) Microsoft Corporation. All rights reserved.
# Licensed under the MIT License. See License.txt in the project root for
# license information.
# -----------------------------------------------------------------------------

[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]
